--- a/app/src/main/res/layout/activity_professor_home.xml
+++ b/app/src/main/res/layout/activity_professor_home.xml
@@ -86,7 +86,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:layout_margin="8dp"
-                    android:text="Manual Attendance"
+                    android:text="Mark Attendance"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:cornerRadius="32dp"
@@ -99,7 +99,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_margin="8dp"
-                    android:text="View Attendance Records"
+                    android:text="Attendance Records"
                     android:textSize="16sp"
                     app:cornerRadius="32dp"
                     app:elevation="2dp"
@@ -111,7 +111,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_margin="8dp"
-                    android:text="View My Courses"
+                    android:text="My Courses"
                     android:textSize="16sp"
                     app:cornerRadius="32dp"
                     app:elevation="2dp"
