--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -106,7 +106,7 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
-                    android:text="My Finals\nSchedule"
+                    android:text="My Courses"
                     android:textSize="16sp"
                     app:cornerRadius="32dp"
                     app:elevation="2dp"
@@ -155,7 +155,7 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
-                    android:text="View My\nSchedule"
+                    android:text="My\nSchedule"
                     android:textSize="16sp"
                     app:cornerRadius="32dp"
                     app:elevation="2dp"
