--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="success_green">#66BB6A</color>
+    <color name="warning_yellow">#FFA726</color>
+    <color name="error_red">#EF5350</color>
+    <color name="light_gray">#EEEEEE</color>
 </resources>
